
2005-11-20  ben  <ben@quakenet.org>

	* dblist.c, lightweight.h, clientcommands/changelev.c,
	clientcommands/cleanupdb.c:
	- Removes channels (from the database) that have been suspended for more than 365 days.
	- Checks a valid auth level is given when using CHANGELEV (previously no figure given would set the auth level to 0).
	- Prevents users from viewing other user's auth levels. (WHOIS)
	- Prevents users from viewing their own authlevel if they are level 1. (WHOAMI)

2005-01-08  froo  <froo@quakenet.org>

	* clientcommands/cleanupdb.c:
	changed behaviour for deleting ownerless channels to only delete channel if there's
	no owner, no master or no ops present on chanlev, ie to make REQUESTOWNER more
	useful and fair.

2004-10-14  froo  <froo@quakenet.org>

	* COMPILATION: - update requirements for make

2004-09-21  froo  <froo@quakenet.org>

	* Makefile: - Makefile: FreeBSD support by ben@quakenet.org

2004-09-20  froo  <froo@quakenet.org>

	* dblist.c:
	- PrintChanlev() added hint on max channels per user. (as suggested by ben@quakenet.org)
	- PrintUInfoRestricted(), PrintUInfo() added hint on max users per channel. (as suggested by ben@quakenet.org)

2004-08-30  froo  <froo@quakenet.org>

	* clientcommands/addchan.c: notify msguser if bot can't join channel.

2004-08-29  Jaster  <jaster@quakenet.org>

	* clientcommands/addchan.c:
	- addchan, supports an additional third argument, "user to notify". utilized by requestl module in O.

2004-08-29  froo  <froo@quakenet.org>

	* clientcommands/addchan.c:
	- initialize struct account *msguseracct to NULL

	* channels.c, channels.h, channelsdb.c,
	clientcommands/cleanupdb.c, clientcommands/die.c, clientcommands/part.c, clientcommands/suspend.c:
	- PartChannel() takes reason for parting as an extra argument
	- cleanupdb, now notfies channel users at PART why it's leaving the channel, ie: no owner/empty/expired
	  as suggested by netzi.
	- die, random diatribe replaced by quit reason.
